--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <img src="images/team4.png" alt="" class="feature-img">
                 </div>
                 <div class="features-details">
-                    <h2 class="feature-title">
-                        Quick list of Our <br> Features
-                    </h2>
+                    <h1 class="feature-title">
+                        <span style="color: #727272;">Quick list</span> of Our <br> <span style="color: #FF900E;">Features</span>
+                    </h1>
                     <p class="feature-description">
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                     </p>
