--- a/index.html
+++ b/index.html
@@ -63,10 +63,115 @@
                 </div>
             </div>
         </section>
+        <!-- architect section start -->
+        <section class="container">
+            <div class="architect-container">
+                <div class="architect-information">
+                    <h1 class="acrhitect-title">Features you will <br> love & enjoy</h1>
+                    <article class="architect-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    </article>
+                    <div class="article-item">
+                        <h3 class="article-item-title">Desktop & Mobile Version</h3>
+                        <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="article-item">
+                        <h3 class="article-item-title">Drag & Drop Builder</h3>
+                        <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="article-item">
+                        <h3 class="article-item-title">Awesome Modern Design</h3>
+                        <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <!-- <div class="article-item">
+                        <h3 class="article-item-title">Super Easy to Edit</h3>
+                        <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div> -->
+                </div>
+                <div class="architect-img">
+                    <img src="images/architect.png" alt="">
+                    <button class="btn-img">10+Year
+                          <div class="experience">Experience</div>
+                        </button>
+                </div>
+            </div>
+            <!-- <button class="btn-img"><span style="font-weight:700px;
+                font-size:65px; line-height:70px;">10+Year</span><br>
+                <span style="font-weight:500px;
+                font-size:25px; line-height:40px;">Experience</span></button> -->
+        </section>
+        <!-- Project section start -->
+        <section class="container">
+            <div class="fact-information">
+                <h1 class="fact-title">Some Facts</h1>
+                <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but<br> the majority have suffered alteration.</p>
+            </div>
+            <div class="project-container">
+                <div class="icon-container">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1 class="project-number">54</h1>
+                    <p class="project-description">Awards Winnings</p>
+                </div>
+                <div class="icon-container">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1 class="project-number">1458</h1>
+                    <p class="project-description">Project Finished</p>
+                </div>
+                <div class="icon-container">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1 class="project-number">590</h1>
+                    <p class="project-description">Clients Worked</p>
+                </div>
+                <div class="icon-container">
+                    <img src="images/icons/email.png" alt="">
+                    <h1 class="project-number">22578</h1>
+                    <p class="project-description">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- Sponsors section start -->
+        <section class="container">
+            <div class="sponsor-container">
+                <div class="sponsor-information">
+                    <h1 class="sponsor-title">Our Sponspors</h1>
+                    <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-logo-container">
+                    <!-- <div class="sponsor-logo">
+                        <img src="images/sponsors/spotify.png" alt="">
+                        <img src="images/sponsors/amazon.png" alt="">
+                        <img src="images/sponsors/google.png" alt="">
+                        <img src="images/sponsors/telerama.png" alt="">
+                        <img src="images/sponsors/figma.png" alt="">
+                    </div> -->
+                    <img src="images/sponsors/spotify.png" alt="">
+                        <img src="images/sponsors/amazon.png" alt="">
+                        <img src="images/sponsors/google.png" alt="">
+                        <img src="images/sponsors/telerama.png" alt="">
+                        <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- extra section start here -->
+        <!-- contact section start -->
+        <section class="container">
+            <div class="contact-section">
+                <h1 class="contact-title">Let's work together...</h1>
+                <div class="contact-site">
+                    <a href="#" class="contact"><i class="fab fa-facebook-square"></i> <span>Facebook</span></a>
+                    <a href="#" class="contact"><i class="fab fa-github"></i> <span> GitHub</span></a>
+                    <a href="#" class="contact"><i class="fab fa-twitter"></i> <span> Twitter</span></a>
+                    <a href="#" class="contact"><i class="fas fa-at"></i><span> Send a mail</span></a>
+                    <a href="#" class="contact"><i class="fas fa-mobile-alt"></i><span> Call me</span></a>
+                </div>
+            </div>
     </main>
+    <!-- main end -->
     <!-- footer start -->
-    <footer>
-
+    <footer class="container">
+        <div class="footer-container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
