--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                         <h3 class="article-item-title">Awesome Modern Design</h3>
                         <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
-                    <!-- <div class="article-item">
+                    <div class="article-item">
                         <h3 class="article-item-title">Super Easy to Edit</h3>
                         <p class="article-item-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="architect-img">
                     <img src="images/architect.png" alt="">
@@ -95,10 +95,6 @@
                         </button>
                 </div>
             </div>
-            <!-- <button class="btn-img"><span style="font-weight:700px;
-                font-size:65px; line-height:70px;">10+Year</span><br>
-                <span style="font-weight:500px;
-                font-size:25px; line-height:40px;">Experience</span></button> -->
         </section>
         <!-- Project section start -->
         <section class="container">
