--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="banner-container">
                 <h1 class="banner-title">Brand New <br>
                     Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Exlore More</button>
             </div> 
             <div class="banner-img">
