--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
                 </div>
                 <div class="architect-img">
                     <img src="images/architect.png" alt="">
-                    <button class="btn-img">10+Year
+                    <div class="architect-btn">
+                        <button class="btn-img">10+Year
                           <div class="experience">Experience</div>
                         </button>
+                    </div>
                 </div>
             </div>
         </section>
